04_Kubernetes/k8s-projects/Project 3 — Three-Tier E-Commerce Application/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ecommerce-ingress
  namespace: ecommerce

spec:
  ingressClassName: nginx

  rules:
  - host: shop.local

    http:

      paths:

      - path: /
        pathType: Prefix

        backend:

          service:
            name: frontend-service

            port:
              number: 80

      - path: /api
        pathType: Prefix

        backend:

          service:
            name: backend-service

            port:
              number: 3000
